--- a/uwthesis.bib
+++ b/uwthesis.bib
@@ -53,7 +53,7 @@ Eprint = {arXiv:1512.03385},
 @article{GPT2,
 author = {OpenAI},
 title = {Better Language Models and Their Implications},
-howpublished = {\url{https://openai.com/blog/better-language-models}},
+howpublished = {https://openai.com/blog/better-language-models},
 month = {},
 year = {},
 note = {(Accessed on 03/28/2019)}
@@ -62,7 +62,7 @@ note = {(Accessed on 03/28/2019)}
 @article{gpt2Time,
 author = {Reddit},
 title = {OpenAI: Better Language Models and Their Implications: Machine Learning},
-howpublished = {\url{https://www.reddit.com/r/MachineLearning/comments/aqlzde/r_openai_better_language_models_and_their/}},
+howpublished = {https://www.reddit.com/r/MachineLearning/comments/aqlzde/r_openai_better_language_models_and_their/},
 month = {},
 year = {},
 note = {(Accessed on 03/28/2019)}
@@ -121,7 +121,7 @@ note = {(Accessed on 03/28/2019)}
 @misc{IDCRepor64:online,
 author = {},
 title = {IDC Report: The New Need for Speed in the Datacenter Network},
-howpublished = {\url{https://www.cisco.com/c/dam/en/us/products/collateral/switches/nexus-9000-series-switches/white-paper-c11-734328.pdf}},
+howpublished = {https://www.cisco.com/c/dam/en/us/products/collateral/switches/nexus-9000-series-switches/white-paper-c11-734328.pdf},
 month = {},
 year = {},
 note = {(Accessed on 04/03/2019)}
@@ -130,7 +130,7 @@ note = {(Accessed on 04/03/2019)}
 @misc{EC2Netwo58:online,
 author = {},
 title = {EC2 Network Performance Cheat Sheet | cloudonaut},
-howpublished = {\url{https://cloudonaut.io/ec2-network-performance-cheat-sheet/}},
+howpublished = {https://cloudonaut.io/ec2-network-performance-cheat-sheet/},
 month = {},
 year = {},
 note = {(Accessed on 04/03/2019)}
@@ -139,7 +139,7 @@ note = {(Accessed on 04/03/2019)}
 @misc{Introduc72:online,
 author = {},
 title = {Introducing the new HB and HC Azure VM sizes for HPC | Blog | Microsoft Azure},
-howpublished = {\url{https://azure.microsoft.com/en-us/blog/introducing-the-new-hb-and-hc-azure-vm-sizes-for-hpc/}},
+howpublished = {https://azure.microsoft.com/en-us/blog/introducing-the-new-hb-and-hc-azure-vm-sizes-for-hpc/},
 month = {},
 year = {},
 note = {(Accessed on 04/03/2019)}
@@ -148,10 +148,17 @@ note = {(Accessed on 04/03/2019)}
 @misc{NewC5nIn20:online,
 author = {},
 title = {New C5n Instances with 100 Gbps Networking | AWS News Blog},
-howpublished = {\url{https://aws.amazon.com/blogs/aws/new-c5n-instances-with-100-gbps-networking/}},
+howpublished = {https://aws.amazon.com/blogs/aws/new-c5n-instances-with-100-gbps-networking/},
 month = {},
 year = {},
 note = {(Accessed on 04/03/2019)}
+}
+
+@article{jayarajan2019priority,
+	title={Priority-based parameter propagation for distributed DNN training},
+	author={Jayarajan, Anand and Wei, Jinliang and Gibson, Garth and Fedorova, Alexandra and Pekhimenko, Gennady},
+	journal={arXiv preprint arXiv:1905.03960},
+	year={2019}
 }
 
 @misc{sapio2019scaling,
@@ -218,7 +225,7 @@ note = {(Accessed on 04/03/2019)}
 @misc{MXNetont0:online,
 	author = {},
 	title = {MXNet on the Cloud — mxnet documentation},
-	howpublished = {\url{https://mxnet.incubator.apache.org/faq/cloud.html?highlight=ec2}},
+	howpublished = {https://mxnet.incubator.apache.org/faq/cloud.html?highlight=ec2},
 	month = {},
 	year = {},
 	note = {(Accessed on 05/09/2018)}
@@ -245,7 +252,7 @@ note = {(Accessed on 04/03/2019)}
 @misc{Distribu25:online,
 	author = {},
 	title = {Distributed Training | Caffe2},
-	howpublished = {\url{https://caffe2.ai/docs/distributed-training.html}},
+	howpublished = {https://caffe2.ai/docs/distributed-training.html},
 	month = {},
 	year = {},
 	note = {(Accessed on 05/09/2018)}
@@ -254,7 +261,7 @@ note = {(Accessed on 04/03/2019)}
 @misc{ApacheMX19:online,
 	author = {},
 	title = {Apache MXNet on AWS},
-	howpublished = {\url{https://aws.amazon.com/mxnet/}},
+	howpublished = {https://aws.amazon.com/mxnet/},
 	month = {},
 	year = {},
 	note = {(Accessed on 05/09/2018)}
@@ -263,7 +270,7 @@ note = {(Accessed on 04/03/2019)}
 
 @MISC{BerkleyCS294,
 	title = {Scaling Deep Learning},
-	howpublished = {\url{https://berkeley-deep-learning.github.io/cs294-131-s17/slides/Catanzaro_Berkeley_CS294.pdf}}
+	howpublished = {https://berkeley-deep-learning.github.io/cs294-131-s17/slides/Catanzaro_Berkeley_CS294.pdf}
 }
 
 @article{DBLP:journals/corr/abs-1712-01887,
@@ -320,17 +327,17 @@ note = {(Accessed on 04/03/2019)}
 
 @misc{TFPS,
 	title = {Distributed {TensorFlow}},
-	howpublished = {\url{https://www.tensorflow.org/deploy/distributed}},
+	howpublished = {https://www.tensorflow.org/deploy/distributed},
 }
 
 @misc{Gloo,
 	title = {Facebook {Gloo} collectives algorithms library},
-	howpublished = {\url{https://github.com/facebookincubator/gloo/blob/master/docs/algorithms.md}},
+	howpublished = {https://github.com/facebookincubator/gloo/blob/master/docs/algorithms.md},
 }
 
 @misc{PSLite,
 	title = {A light and efficient implementation of the parameter server framework. It provides clean yet powerful APIs. For example, a worker node can communicate with the server nodes by},
-	howpublished = {\url{https://github.com/dmlc/ps-lite}},
+	howpublished = {https://github.com/dmlc/ps-lite},
 }
 
 @misc{AMDEpyc,
@@ -436,7 +443,7 @@ howpublished = {https://www.amd.com/en/products/epyc-benchmarks}
 @misc{AzureWin5:online,
 	author = {},
 	title = {{Azure} {Windows} {VM} sizes - {HPC}},
-	howpublished = {\url{https://docs.microsoft.com/en-us/azure/virtual-machines/windows/sizes-hpc}},
+	howpublished = {https://docs.microsoft.com/en-us/azure/virtual-machines/windows/sizes-hpc},
 	month = {},
 	year = {},
 	note = {(Accessed on 01/11/2018)}
@@ -509,7 +516,7 @@ year={2016}
 @misc{baidures3:online,
 	author = {},
 	title = {baidu-research/baidu-allreduce},
-	howpublished = {\url{https://github.com/baidu-research/baidu-allreduce}},
+	howpublished = {https://github.com/baidu-research/baidu-allreduce},
 	month = {},
 	year = {},
 	note = {(Accessed on 05/14/2018)}
@@ -601,7 +608,7 @@ year={2016}
 @misc{Placemen61:online,
 	author = {},
 	title = {Placement Groups - Amazon Elastic Compute Cloud},
-	howpublished = {\url{https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/placement-groups.html#placement-groups-cluster}},
+	howpublished = {https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/placement-groups.html#placement-groups-cluster},
 	month = {},
 	year = {},
 	note = {(Accessed on 05/11/2018)}
@@ -790,7 +797,7 @@ year={2016}
 @misc{CloudTPU88:online,
 	author = {},
 	title = {Cloud TPUs - ML accelerators for TensorFlow  |  Google Cloud},
-	howpublished = {\url{https://cloud.google.com/tpu/}},
+	howpublished = {https://cloud.google.com/tpu/},
 	month = {},
 	year = {},
 	note = {(Accessed on 05/16/2018)}
@@ -799,7 +806,7 @@ year={2016}
 @misc{MachineL65:online,
 	author = {},
 	title = {Machine Learning | Microsoft Azure},
-	howpublished = {\url{https://azure.microsoft.com/en-us/services/machine-learning-studio/}},
+	howpublished = {https://azure.microsoft.com/en-us/services/machine-learning-studio/},
 	month = {},
 	year = {},
 	note = {(Accessed on 05/16/2018)}
@@ -870,6 +877,8 @@ publisher = {{USENIX} Association},
  publisher = {USENIX Association},
  address = {Berkeley, CA, USA},
 } 
+
+@MISC{CISCOMarket, title = {The Market Need for 40 Gigabit Ethernet}, howpublished = {http://www.cisco.com/c/en/us/products/collateral/switches/catalyst-6500-series-switches/white_paper_c11-696667.html}}
 
 @inproceedings{Gottlieb:1982:NUM:800048.801711,
  author = {Gottlieb, Allan and Grishman, Ralph and Kruskal, Clyde P. and McAuliffe, Kevin P. and Rudolph, Larry and Snir, Marc},
@@ -1081,7 +1090,7 @@ howpublished={https://goo.gl/cqyBtA}
 @misc{MXNetont97:online,
 author = {},
 title = {MXNet on the Cloud — mxnet documentation},
-howpublished = {\url{https://mxnet.incubator.apache.org/faq/cloud.html?highlight=ec2}},
+howpublished = {https://mxnet.incubator.apache.org/faq/cloud.html?highlight=ec2},
 month = {},
 year = {},
 note = {(Accessed on 12/07/2018)}
@@ -1090,7 +1099,7 @@ note = {(Accessed on 12/07/2018)}
 @misc{pytorchr46:online,
 author = {},
 title = {pytorch/resnet50\_trainer.py at master · pytorch/pytorch},
-howpublished = {\url{https://github.com/pytorch/pytorch/blob/master/caffe2/python/examples/resnet50_trainer.py}},
+howpublished = {https://github.com/pytorch/pytorch/blob/master/caffe2/python/examples/resnet50_trainer.py},
 month = {},
 year = {},
 note = {(Accessed on 12/07/2018)}
@@ -1100,7 +1109,7 @@ note = {(Accessed on 12/07/2018)}
 @misc{GoogleCl74:online,
 author = {},
 title = {Google Cloud Training. Google Cloud},
-howpublished = {\url{https://cloud.google.com/training/courses/machine-learning-tensorflow-gcp}},
+howpublished = {https://cloud.google.com/training/courses/machine-learning-tensorflow-gcp},
 month = {},
 year = {},
 note = {(Accessed on 03/04/2019)}
@@ -1109,7 +1118,7 @@ note = {(Accessed on 03/04/2019)}
 @misc{MachineL50:online,
 author = {},
 title = {Machine Learning Studio. Microsoft Azure},
-howpublished = {\url{https://azure.microsoft.com/en-us/services/machine-learning-studio/}},
+howpublished = {https://azure.microsoft.com/en-us/services/machine-learning-studio/},
 month = {},
 year = {},
 note = {(Accessed on 12/06/2018)}
@@ -1118,7 +1127,7 @@ note = {(Accessed on 12/06/2018)}
 @misc{DeepLear23:online,
 author = {},
 title = {Deep Learning on AWS},
-howpublished = {\url{https://aws.amazon.com/deep-learning/}},
+howpublished = {https://aws.amazon.com/deep-learning/},
 month = {},
 year = {},
 note = {(Accessed on 12/06/2018)}
@@ -1190,7 +1199,7 @@ doi = {10.1007/978-3-540-24685-5_1}
 @misc{Operatio73:online,
 author = {},
 title = {Operations - NCCL 2.3.4 documentation},
-howpublished = {\url{https://docs.nvidia.com/deeplearning/sdk/nccl-developer-guide/docs/usage/operations.html}},
+howpublished = {https://docs.nvidia.com/deeplearning/sdk/nccl-developer-guide/docs/usage/operations.html},
 month = {},
 year = {},
 note = {(Accessed on 12/07/2018)}
@@ -1208,7 +1217,7 @@ note = {(Accessed on 12/07/2018)}
 @misc{Placemen48:online,
 author = {},
 title = {Placement Groups - Amazon Elastic Compute Cloud},
-howpublished = {\url{https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/placement-groups.html}},
+howpublished = {https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/placement-groups.html},
 month = {},
 year = {},
 note = {(Accessed on 12/07/2018)}
@@ -1225,7 +1234,7 @@ title = {EyeQ: practical network performance isolation for the multi-tenant clou
 @misc{27Octobe15:online,
 author = {},
 title = {27 | October | 2011 | Mixpanel Engineering},
-howpublished = {\url{https://engineering.mixpanel.com/2011/10/27/}},
+howpublished = {https://engineering.mixpanel.com/2011/10/27/},
 month = {},
 year = {},
 note = {(Accessed on 12/07/2018)}
@@ -1234,7 +1243,7 @@ note = {(Accessed on 12/07/2018)}
 @misc{Introduc22:online,
 author = {},
 title = {Introducing Dynamic Training for deep learning with Amazon EC2 | AWS Machine Learning Blog},
-howpublished = {\url{https://aws.amazon.com/blogs/machine-learning/introducing-dynamic-training-for-deep-learning-with-amazon-ec2/}},
+howpublished = {https://aws.amazon.com/blogs/machine-learning/introducing-dynamic-training-for-deep-learning-with-amazon-ec2/},
 month = {},
 year = {},
 note = {(Accessed on 12/07/2018)}
@@ -1243,7 +1252,7 @@ note = {(Accessed on 12/07/2018)}
 @misc{AzureBat16:online,
 author = {},
 title = {Azure Batch AI | Train AI Models | Microsoft Azure},
-howpublished = {\url{https://azure.microsoft.com/en-us/services/batch-ai/}},
+howpublished = {https://azure.microsoft.com/en-us/services/batch-ai/},
 month = {},
 year = {},
 note = {(Accessed on 12/07/2018)}
@@ -1252,7 +1261,7 @@ note = {(Accessed on 12/07/2018)}
 @misc{MXNetont32:online,
 author = {},
 title = {MXNet on the Cloud — mxnet documentation},
-howpublished = {\url{https://mxnet.incubator.apache.org/faq/cloud.html?highlight=ec2}},
+howpublished = {https://mxnet.incubator.apache.org/faq/cloud.html?highlight=ec2},
 month = {},
 year = {},
 note = {(Accessed on 12/07/2018)}
@@ -1261,7 +1270,7 @@ note = {(Accessed on 12/07/2018)}
 @misc{pytorchr46:online,
 author = {},
 title = {pytorch/resnet50\_trainer.py at master | pytorch/pytorch},
-howpublished = {\url{https://github.com/pytorch/pytorch/blob/master/caffe2/python/examples/resnet50_trainer.py}},
+howpublished = {https://github.com/pytorch/pytorch/blob/master/caffe2/python/examples/resnet50_trainer.py},
 month = {},
 year = {},
 note = {(Accessed on 12/07/2018)}
@@ -1270,7 +1279,7 @@ note = {(Accessed on 12/07/2018)}
 @misc{benchmar10:online,
 author = {},
 title = {tensorflow/benchmarks},
-howpublished = {\url{https://github.com/tensorflow/benchmarks/tree/master/scripts/tf_cnn_benchmarks}},
+howpublished = {https://github.com/tensorflow/benchmarks/tree/master/scripts/tf_cnn_benchmarks},
 month = {},
 year = {},
 note = {(Accessed on 12/07/2018)}
@@ -1359,7 +1368,7 @@ doi = {10.13140/2.1.4422.3363}
 @misc{softroce,
 author = {},
 title = {Soft RDMA over Ethernet (RoCE) Driver},
-howpublished = {\url{https://github.com/SoftRoCE/rxe-dev/wiki/rxe-dev:-Home}},
+howpublished = {https://github.com/SoftRoCE/rxe-dev/wiki/rxe-dev:-Home},
 month = {},
 year = {},
 note = {(Accessed on 12/16/2018)}
@@ -1390,7 +1399,7 @@ doi = {10.1145/3267809.3267810}
 @misc{TopEight59:online,
 author = {},
 title = {Top Eight Data Center Trends For Keeping up with High Data Bandwidth Demand - Marvell - Blog Marvell – Blog},
-howpublished = {\url{https://blogs.marvell.com/2017/04/top-eight-data-center-trends-for-keeping-up-with-high-data-bandwidth-demand/}},
+howpublished = {https://blogs.marvell.com/2017/04/top-eight-data-center-trends-for-keeping-up-with-high-data-bandwidth-demand/},
 month = {},
 year = {},
 note = {(Accessed on 02/25/2019)}
@@ -1409,7 +1418,7 @@ note = {(Accessed on 02/25/2019)}
 @misc{affinity2Distance,
 author = {},
 title = {4.8. Pairwise metrics, Affinities and Kernels. scikit-learn 0.20.2 documentation},
-howpublished = {\url{https://scikit-learn.org/stable/modules/metrics.html}},
+howpublished = {https://scikit-learn.org/stable/modules/metrics.html},
 month = {},
 year = {},
 note = {(Accessed on 02/06/2019)}
@@ -1418,7 +1427,7 @@ note = {(Accessed on 02/06/2019)}
 @misc{NTTTCP,
 author = {},
 title = {Microsoft/ntttcp-for-linux: A Linux network throughput multiple-thread benchmark tool.},
-howpublished = {\url{https://github.com/Microsoft/ntttcp-for-linux}},
+howpublished = {https://github.com/Microsoft/ntttcp-for-linux},
 month = {},
 year = {},
 note = {(Accessed on 02/06/2019)}
@@ -1440,7 +1449,7 @@ month={Aug},}
 @misc{Createan37:online,
 author = {},
 title = {Create an Azure virtual machine with Accelerated Networking | Microsoft Docs},
-howpublished = {\url{https://docs.microsoft.com/en-us/azure/virtual-network/create-vm-accelerated-networking-cli}},
+howpublished = {https://docs.microsoft.com/en-us/azure/virtual-network/create-vm-accelerated-networking-cli},
 month = {},
 year = {},
 note = {(Accessed on 01/06/2019)}
@@ -1449,7 +1458,7 @@ note = {(Accessed on 01/06/2019)}
 @misc{Enablean80:online,
 author = {},
 title = {Enable and Configure Enhanced Networking for EC2 Instances},
-howpublished = {\url{https://aws.amazon.com/premiumsupport/knowledge-center/enable-configure-enhanced-networking/}},
+howpublished = {https://aws.amazon.com/premiumsupport/knowledge-center/enable-configure-enhanced-networking/},
 month = {},
 year = {},
 note = {(Accessed on 01/06/2019)}
@@ -1458,7 +1467,7 @@ note = {(Accessed on 01/06/2019)}
 @misc{NVIDIAnc61:online,
 author = {},
 title = {NVIDIA/nccl-tests: NCCL Tests},
-howpublished = {\url{https://github.com/NVIDIA/nccl-tests}},
+howpublished = {https://github.com/NVIDIA/nccl-tests},
 month = {},
 year = {},
 note = {(Accessed on 01/06/2019)}
@@ -1533,7 +1542,7 @@ publisher = {{USENIX} Association},
 @misc{Nowanyon13:online,
 author = {},
 title = {Now anyone can train Imagenet in 18 minutes · fast.ai},
-howpublished = {\url{https://www.fast.ai/2018/08/10/fastai-diu-imagenet/}},
+howpublished = {https://www.fast.ai/2018/08/10/fastai-diu-imagenet/},
 month = {},
 year = {},
 note = {(Accessed on 12/20/2018)}
@@ -1582,7 +1591,7 @@ note = {(Accessed on 12/20/2018)}
 @misc{NetlinkW13:online,
 author = {},
 title = {Netlink Wikipedia},
-howpublished = {\url{https://en.wikipedia.org/wiki/Netlink##cite_note-4}},
+howpublished = {https://en.wikipedia.org/wiki/Netlink##cite_note-4},
 month = {},
 year = {},
 note = {(Accessed on 12/22/2018)}
@@ -1658,7 +1667,7 @@ note = {(Accessed on 12/22/2018)}
 @misc{dmlcpsli50:online,
 author = {},
 title = {dmlc/ps-lite: A lightweight parameter server interface},
-howpublished = {\url{https://github.com/dmlc/ps-lite}},
+howpublished = {https://github.com/dmlc/ps-lite},
 month = {},
 year = {},
 note = {(Accessed on 12/22/2018)}
@@ -1667,7 +1676,7 @@ note = {(Accessed on 12/22/2018)}
 @misc{facebook35:online,
 author = {},
 title = {facebookincubator/gloo: Collective communications library with various primitives for multi-machine training.},
-howpublished = {\url{https://github.com/facebookincubator/gloo}},
+howpublished = {https://github.com/facebookincubator/gloo},
 month = {},
 year = {},
 note = {(Accessed on 12/22/2018)}
@@ -1676,7 +1685,7 @@ note = {(Accessed on 12/22/2018)}
 @misc{Evaluati26:online,
 author = {},
 title = {Evaluation Of Major Deep Learning Frameworks With Benchmark},
-howpublished = {\url{https://www.analyticsindiamag.com/evaluation-of-major-deep-learning-frameworks/}},
+howpublished = {https://www.analyticsindiamag.com/evaluation-of-major-deep-learning-frameworks/},
 month = {},
 year = {},
 note = {(Accessed on 12/22/2018)}
@@ -1816,7 +1825,7 @@ title = {Deep Learning Inference in Facebook Data Centers: Characterization, Per
 @misc{sagemaker,
 author = {},
 title = {Amazon EC2 F1 Instances},
-howpublished = {\url{https://aws.amazon.com/ec2/instance-types/f1/}},
+howpublished = {https://aws.amazon.com/ec2/instance-types/f1},
 month = {},
 year = {},
 note = {(Accessed on 03/04/2019)}
@@ -1957,7 +1966,7 @@ Heterogeneous Network Hierarchy},
 @misc{Introduc92:online,
 author = {},
 title = {Introducing Amazon EC2 C5n Instances Featuring 100 Gbps of Network Bandwidth},
-howpublished = {\url{https://aws.amazon.com/about-aws/whats-new/2018/11/introducing-amazon-ec2-c5n-instances/}},
+howpublished = {https://aws.amazon.com/about-aws/whats-new/2018/11/introducing-amazon-ec2-c5n-instances/},
 month = {},
 year = {},
 note = {(Accessed on 03/07/2019)}
@@ -1966,7 +1975,7 @@ note = {(Accessed on 03/07/2019)}
 @misc{Introduc49:online,
 author = {},
 title = {Introducing the new HB and HC Azure VM sizes for HPC. Blog. Microsoft Azure},
-howpublished = {\url{https://azure.microsoft.com/en-us/blog/introducing-the-new-hb-and-hc-azure-vm-sizes-for-hpc/}},
+howpublished = {https://azure.microsoft.com/en-us/blog/introducing-the-new-hb-and-hc-azure-vm-sizes-for-hpc/},
 month = {},
 year = {},
 note = {(Accessed on 03/07/2019)}
@@ -2131,3 +2140,4 @@ note = {(Accessed on 03/19/2019)}
   year={2012},
   publisher={John Wiley \& Sons}
 }
+
