--- a/uwthesis.tex
+++ b/uwthesis.tex
@@ -60,6 +60,22 @@
 \usepackage{alltt}  % 
 \usepackage{fontspec}
 \usepackage{xspace}
+\usepackage{microtype}
+\usepackage{graphicx}
+\usepackage{subfigure}
+\usepackage{booktabs} % for professional tables
+\usepackage{graphicx}
+\usepackage{tikz}
+\usepackage{amsmath}
+\usepackage[english]{babel}
+\usepackage{blindtext}
+\usepackage{bbm}
+\usepackage{textcomp}
+\usepackage{ulem}
+\usepackage{tabularx}
+\usepackage{enumitem}
+\usepackage{xcolor}
+\usepackage[font=small,skip=-0pt]{caption}
 % \setmainfont[Ligatures=TeX]{DENG.TTF}
 \newenvironment{demo}
   {\begin{alltt}\leftskip3em
