Updates from Overleaf

--- a/uwthesis.bib
+++ b/uwthesis.bib
@@ -878,11 +878,13 @@ publisher = {{USENIX} Association},
  address = {Berkeley, CA, USA},
 } 
 
-@MISC{CISCOMarket, title = {The Market Need for 40 Gigabit Ethernet}, howpublished = {http://www.cisco.com/c/en/us/products/collateral/switches/catalyst-6500-series-switches/white_paper_c11-696667.html}}
+@MISC{CISCOMarket, 
+title = {The Market Need for 40 Gigabit Ethernet}, howpublished = {\url{http://www.cisco.com/c/en/us/products/collateral/switches/catalyst-6500-series-switches/white_paper_c11-696667.html}}
+}
 
 @inproceedings{Gottlieb:1982:NUM:800048.801711,
  author = {Gottlieb, Allan and Grishman, Ralph and Kruskal, Clyde P. and McAuliffe, Kevin P. and Rudolph, Larry and Snir, Marc},
- title = {The {NYU} {Ultracomputer}\&Mdash;Designing a {MIMD}, Shared-memory Parallel Machine},
+ title = {The {NYU} {Ultracomputer} Mdash;Designing a {MIMD}, Shared-memory Parallel Machine},
  booktitle = {Proceedings of the 9th Annual Symposium on Computer Architecture},
  series = {ISCA '82},
  year = {1982},
@@ -2141,3 +2143,30 @@ note = {(Accessed on 03/19/2019)}
   publisher={John Wiley \& Sons}
 }
 
+@misc{NewC5nIn6:online,
+author = {},
+title = {New C5n Instances with 100 Gbps Networking | AWS News Blog},
+howpublished = {https://aws.amazon.com/blogs/aws/new-c5n-instances-with-100-gbps-networking/},
+month = {},
+year = {},
+note = {(Accessed on 02/04/2020)}
+}
+
+@misc{Introduc9:online,
+author = {},
+title = {Introducing the new HB and HC Azure VM sizes for HPC | Azure Blog and Updates | Microsoft Azure},
+howpublished = {https://azure.microsoft.com/en-us/blog/introducing-the-new-hb-and-hc-azure-vm-sizes-for-hpc/},
+month = {},
+year = {},
+note = {(Accessed on 02/04/2020)}
+}
+
+@article{subgradient,
+author = {Boyd, Stephen and Mutapcic, Almir},
+year = {2003},
+month = {01},
+pages = {},
+title = {Subgradient Methods},
+volume = {2004},
+journal = {lecture notes of EE392o, Stanford University, Autumn Quarter}
+}
